updated add data fuction

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,9 @@
         </div>
       </div>
     </div>
+    <div>
+      <a href="./upload.html">글쓰기</a>
+    </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
