--- a/public/upload.html
+++ b/public/upload.html
@@ -18,12 +18,12 @@
         class="form-control w-6/12 border-solid border-2 border-indigo-600 mt-2"
         id="content"
       >
-        content
       </textarea>
       <input class="form-control w-6/12 mt-2" type="file" id="image" />
       <button
         class="btn bg-teal-400 border-solid border-2 border-indigo-600 w-6/12 mt-2"
         id="send"
+        onclick="inputValue()"
       >
         올리기
       </button>
@@ -47,6 +47,16 @@
 
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
+      const db = firebase.firestore();
+      function inputValue() {
+        db.collection("Board").add({
+          title: document.getElementById("title").value,
+          contents: document.getElementById("content").value,
+          name: "username",
+          role: "userrole",
+          date: new Date(),
+        });
+      }
     </script>
   </body>
 </html>
