--- a/public/upload.html
+++ b/public/upload.html
@@ -7,18 +7,19 @@
     <title>Mboard</title>
   </head>
   <body>
-    <div class="md:container md:mx-auto text-center mt-10">
+    <div class="md:container md:mx-auto text-center mt-10 shadow-lg">
       <input
         type="text"
-        class="form-control border-solid border-2 border-indigo-600 w-6/12 rounded-md"
+        class="form-control border-solid border-2 border-indigo-600 w-6/12 rounded-md shadow-md"
         id="title"
         placeholder="title"
       />
       <textarea
-        class="form-control w-6/12 border-solid border-2 border-indigo-600 mt-2 rounded-md"
+        rows="5"
+        class="form-control w-6/12 border-solid border-2 border-indigo-600 mt-2 rounded-md shadow-md"
         id="content"
-      >
-      </textarea>
+        placeholder="write in contents"
+      ></textarea>
       <input class="form-control w-6/12 mt-2" type="file" id="image" />
       <div class="px-4 py-3 bg-gray-50 text-center sm:px-6">
         <button
