--- a/public/index.html
+++ b/public/index.html
@@ -278,27 +278,39 @@
         docRef
           .get()
           .then((doc) => {
-            let httpsReference = storage.refFromURL(`${doc.data().img}`);
-            let desertRef = storage
-              .ref()
-              .child(`${httpsReference._delegate._location.path_}`);
-            desertRef
-              .delete()
-              .then(() => {
-                alert("이미지 지워짐");
-                docRef
-                  .delete()
-                  .then(() => {
-                    alert("Document successfully deleted!");
-                    window.location.href = "./index.html";
-                  })
-                  .catch((error) => {
-                    alert("Error removing document: ", error);
-                  });
-              })
-              .catch((error) => {
-                alert("이미지 지우다 오류!");
-              });
+            if (doc.data().img == undefined) {
+              docRef
+                .delete()
+                .then(() => {
+                  alert("Document successfully deleted!");
+                  window.location.href = "./index.html";
+                })
+                .catch((error) => {
+                  alert("Error removing document: ", error);
+                });
+            } else {
+              let httpsReference = storage.refFromURL(`${doc.data().img}`);
+              let desertRef = storage
+                .ref()
+                .child(`${httpsReference._delegate._location.path_}`);
+              desertRef
+                .delete()
+                .then(() => {
+                  alert("이미지 지워짐");
+                  docRef
+                    .delete()
+                    .then(() => {
+                      alert("Document successfully deleted!");
+                      window.location.href = "./index.html";
+                    })
+                    .catch((error) => {
+                      alert("Error removing document: ", error);
+                    });
+                })
+                .catch((error) => {
+                  alert("이미지 지우다 오류!");
+                });
+            }
           })
           .catch((error) => {
             alert("Error getting document:", error);
