--- a/public/index.html
+++ b/public/index.html
@@ -251,6 +251,7 @@
       const editContents = document.getElementById("content");
       const deleteBtn = document.getElementById("delete-btn");
       const editBtn = document.getElementById("edit-btn");
+      const imgCheck = document.getElementById("image");
       function editClick(a) {
         deleteBtn.id = a;
         editBtn.id = a;
@@ -318,18 +319,72 @@
       }
       function rewrite(a) {
         let rewriteDoc = firebase.firestore().collection("Board").doc(`${a}`);
-        rewriteDoc
-          .update({
-            title: document.getElementById("title").value,
-            contents: document.getElementById("content").value,
-          })
-          .then(() => {
-            console.log("Document successfully written!");
-            window.location.href = "./index.html";
-          })
-          .catch((error) => {
-            console.error("Error writing document: ", error);
+        let storage = firebase.storage();
+        if (imgCheck.value == "") {
+          rewriteDoc
+            .update({
+              title: document.getElementById("title").value,
+              contents: document.getElementById("content").value,
+            })
+            .then(() => {
+              console.log("Document successfully written!");
+              window.location.href = "./index.html";
+            })
+            .catch((error) => {
+              console.error("Error writing document: ", error);
+            });
+        } else {
+          //일단 이미지 지우고
+          rewriteDoc.get().then((doc) => {
+            let httpsReference = storage.refFromURL(`${doc.data().img}`);
+            let desertRef = storage
+              .ref()
+              .child(`${httpsReference._delegate._location.path_}`);
+            desertRef
+              .delete()
+              .then(() => {
+                alert("the og img successfully deleted");
+              })
+              .catch((error) => {
+                alert("이미지 바꾸다가 오류!");
+              });
           });
+          //다시 이미지 넣자
+          let file = document.getElementById("image").files[0];
+          let storageRef = storage.ref();
+          let imagePath = storageRef.child("image/" + file.name);
+          let uploadImg = imagePath.put(file);
+
+          uploadImg.on(
+            "state_changed",
+            // 변화시 동작하는 함수
+            null,
+            //에러시 동작하는 함수
+            (error) => {
+              console.error("실패사유는", error);
+            },
+            // 성공시 동작하는 함수
+            () => {
+              uploadImg.snapshot.ref.getDownloadURL().then((url) => {
+                let objects = {
+                  title: document.getElementById("title").value,
+                  contents: document.getElementById("content").value,
+                  img: url,
+                };
+                rewriteDoc
+                  .update(objects)
+                  .then(() => {
+                    alert("수정 성공");
+                    window.location.href = "./index.html";
+                  })
+                  .catch((err) => {
+                    console.log(err);
+                    alert("수정 실패, 수정 버튼을 다시 눌러주세요.");
+                  });
+              });
+            }
+          );
+        }
       }
     </script>
   </body>
