--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-    <div class="bg-gray-50 visible container" id="main-modal">
+    <div class="bg-gray-50 hidden container" id="main-modal">
       <div
         class="absolute inset-0 flex items-center justify-center bg-gray-700 bg-opacity-50"
       >
@@ -81,10 +81,16 @@
           <h2
             class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl"
           >
-            <span class="block" id="main-title">Title : 블라블라</span>
-            <span class="mt-2 block text-indigo-600 text-2xl" id="main-content"
-              >Contents : 블라블라</span
-            >
+            <span class="block" id="main-title"></span>
+            <span
+              class="mt-2 block text-indigo-600 text-2xl"
+              id="main-content"
+            ></span>
+            <img
+              id="main-img"
+              onerror="this.style.display='none'"
+              style="max-height: 500px"
+            />
           </h2>
           <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
             <div class="inline-flex rounded-md shadow">
@@ -434,6 +440,7 @@
       const mainModal = document.getElementById("main-modal");
       const mainTitle = document.getElementById("main-title");
       const mainContent = document.getElementById("main-content");
+      const mainImg = document.getElementById("main-img");
       function mainclick(a) {
         firebase
           .firestore()
@@ -441,9 +448,16 @@
           .doc(`${a}`)
           .get()
           .then((doc) => {
-            mainModal.className = "bg-gray-50 visible container";
-            mainTitle.innerText = `Title : ${doc.data().title}`;
-            mainContent.innerText = `Contents : ${doc.data().contents}`;
+            if (doc.data().img == undefined) {
+              mainModal.className = "bg-gray-50 visible container";
+              mainTitle.innerText = `Title : ${doc.data().title}`;
+              mainContent.innerText = `Contents : ${doc.data().contents}`;
+            } else {
+              mainModal.className = "bg-gray-50 visible container";
+              mainTitle.innerText = `Title : ${doc.data().title}`;
+              mainContent.innerText = `Contents : ${doc.data().contents}`;
+              mainImg.setAttribute("src", `${doc.data().img}`);
+            }
           })
           .catch((error) => {
             mainModal.className = "bg-gray-50 visible container";
@@ -454,6 +468,7 @@
         mainModal.className = "bg-gray-50 hidden container";
         mainTitle.innerText = ``;
         mainContent.innerText = ``;
+        mainImg.removeAttribute("src");
       }
     </script>
   </body>
