--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,7 @@
       </div>
     </div>
 
-    <div class="bg-gray-50 hidden container" id="main-modal">
+    <div class="hidden container" id="main-modal">
       <div
         class="absolute items-center inset-0 flex justify-center bg-gray-700 bg-opacity-50"
         id="main-modal-absoulte"
@@ -225,7 +225,7 @@
             <div class="bg-white w-full">
               <div class="flex-col w-full mb-2">
                 <span class="text-indigo-600 font-semibold text-lg"
-                  >Coments</span
+                  >Comments</span
                 >
                 <div class="flex border-t border-b py-1">
                   <div class="-space-x-2">
@@ -293,6 +293,7 @@
                 <textarea
                   rows="2"
                   class="border p-2 rounded w-full"
+                  id="comment-content"
                   placeholder="Write something..."
                 ></textarea>
               </div>
@@ -301,6 +302,8 @@
                 <div>
                   <button
                     class="px-4 py-1 bg-gray-800 text-white rounded-md font-light hover:bg-gray-700"
+                    id="comment-submit"
+                    onclick="submitClick(this.ariaLabel)"
                   >
                     Submit
                   </button>
@@ -313,7 +316,8 @@
           >
             <div class="ml-3 mb-1 inline-flex rounded-md shadow">
               <a
-                onclick="mainXClick()"
+                id="main-close"
+                onclick="mainXClick(this.id)"
                 class="inline-flex items-center justify-center px-5 py-1 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50"
                 style="cursor: pointer"
               >
@@ -407,14 +411,6 @@
     </script>
     <script>
       const db = firebase.firestore();
-      db.collection("Board")
-        .doc("7dJ65m3noQoRJrCMsyQE")
-        .collection("coments")
-        .doc("oo4fvR1gFEHjrgR8iKQM")
-        .get()
-        .then((mindoc) => {
-          console.log(mindoc.data().name);
-        });
       db.collection("Board")
         .get()
         .then((items) => {
@@ -663,6 +659,21 @@
       const mainImg = document.getElementById("main-img");
       const mainModalAbsoulte = document.getElementById("main-modal-absoulte");
       function mainclick(a) {
+        document.getElementById("comment-submit").ariaLabel = `${a}`;
+        document.getElementById("main-close").ariaLabel = `${a}`;
+        //comments
+        firebase
+          .firestore()
+          .collection("Board")
+          .doc(`${a}`)
+          .collection("comments")
+          .get()
+          .then((items) => {
+            items.forEach((mindoc) => {
+              console.log(mindoc.data().name);
+            });
+          });
+
         firebase
           .firestore()
           .collection("Board")
@@ -687,17 +698,42 @@
             mainTitle.innerText = `에러 발생 : ${error}`;
           });
       }
-      function mainXClick() {
+      function mainXClick(a) {
         mainModal.className = "bg-gray-50 hidden container";
         mainTitle.innerText = ``;
         mainContent.innerText = ``;
         mainModalAbsoulte.className =
           "absolute items-center inset-0 flex justify-center bg-gray-700 bg-opacity-50";
         mainImg.removeAttribute("src");
+        document.getElementById("comment-submit").ariaLabel = "";
+        document.getElementById("main-close").ariaLabel = ``;
       }
     </script>
     <script>
       //coments js
+      const commentContent = document.getElementById("comment-content");
+      const commentBtn = document.getElementById("comment-submit");
+      function submitClick(a) {
+        commentBtn.id = `${a}`;
+        let objects = {
+          name: "username",
+          contents: commentContent.value,
+          time: new Date(),
+        };
+        firebase
+          .firestore()
+          .collection("Board")
+          .doc(`${a}`)
+          .collection("comments")
+          .add(objects)
+          .then(() => {
+            alert("댓글 업로드 성공");
+          })
+          .catch((err) => {
+            console.log(err);
+            alert("댓글 업로드 실패, 올리기 버튼을 다시 눌러주세요.");
+          });
+      }
     </script>
   </body>
 </html>
