--- a/public/index.html
+++ b/public/index.html
@@ -750,6 +750,7 @@
                   <div class="-space-x-2">댓글 없음</div>
                 </div>
               </div>`;
+        document.getElementById("comment-content").value = "";
       }
     </script>
     <script>
