--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
           type="email"
           class="border-2 pl-2 rounded-md w-3/4"
           placeholder="write email"
-          id="email-new"
+          id="email"
         />
       </div>
       <div class="mb-5 text-center">
@@ -21,7 +21,7 @@
           type="password"
           class="border-2 pl-2 rounded-md w-3/4"
           placeholder="write password"
-          id="pw-new"
+          id="pw"
         />
       </div>
       <div class="mb-5 text-center">
@@ -29,7 +29,7 @@
           type="submit"
           class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
           id="register"
-          onclick=""
+          onclick="clickLogIn()"
         >
           로그인
         </button>
@@ -58,27 +58,21 @@
     <script>
       const db = firebase.firestore();
       const storage = firebase.storage();
-      function clickSignUp() {
-        let wrotenNickname = document.getElementById("nickname-new").value;
-        let email = document.getElementById("email-new").value;
-        let password = document.getElementById("pw-new").value;
+      function clickLogIn() {
+        let email = document.getElementById("email").value;
+        let password = document.getElementById("pw").value;
         firebase
           .auth()
-          .createUserWithEmailAndPassword(email, password)
-          .then((result) => {
-            db.collection("Users")
-              .doc(`${result.user.uid}`)
-              .set({
-                nickname: `${wrotenNickname}`,
-                role: "user",
-              })
-              .then(() => {
-                alert("가입되었습니다. 로그인 후 이용해주세요.");
-                window.location.href = "./index.html";
-              });
+          .signInWithEmailAndPassword(email, password)
+          .then((userCredential) => {
+            // Signed in
+            alert("로그인 성공");
+            window.location.href = "./index.html";
           })
           .catch((error) => {
-            console.log(error, "오류 발생 다시 한번 시도해주세요");
+            let errorCode = error.code;
+            let errorMessage = error.message;
+            alert(errorMessage);
           });
       }
     </script>
