--- a/public/login.html
+++ b/public/login.html
@@ -8,6 +8,7 @@
   </head>
   <body class="flex w-full h-full items-center justify-center">
     <div class="container w-1/4 mt-10 shadow-lg rounded-md">
+      <h2 class="font-extrabold text-xl text-center mb-3">로그인</h2>
       <div class="mb-5 text-center">
         <input
           type="email"
@@ -22,6 +23,7 @@
           class="border-2 pl-2 rounded-md w-3/4"
           placeholder="write password"
           id="pw"
+          onkeyup="enterkey()"
         />
       </div>
       <div class="mb-5 text-center">
@@ -74,6 +76,25 @@
             let errorMessage = error.message;
             alert(errorMessage);
           });
+      }
+      function enterkey() {
+        if (window.event.keyCode == 13) {
+          let email = document.getElementById("email").value;
+          let password = document.getElementById("pw").value;
+          firebase
+            .auth()
+            .signInWithEmailAndPassword(email, password)
+            .then((userCredential) => {
+              // Signed in
+              alert("로그인 성공");
+              window.location.href = "./index.html";
+            })
+            .catch((error) => {
+              let errorCode = error.code;
+              let errorMessage = error.message;
+              alert(errorMessage);
+            });
+        }
       }
     </script>
   </body>
