--- a/public/signup.html
+++ b/public/signup.html
@@ -7,7 +7,17 @@
     <title>Mboard</title>
   </head>
   <body class="flex w-full h-full items-center justify-center">
-    <div class="container w-1/4 mt-10 shadow-lg rounded-md">
+    <div class="container min-w-fit w-1/4 mt-10 shadow-lg rounded-md">
+      <h2 class="font-extrabold text-xl text-center mb-3">회원 가입</h2>
+      <div class="mb-3 text-center">
+        <p>nickname</p>
+        <input
+          type="text"
+          class="border-2 pl-2 w-3/4 rounded-md"
+          placeholder="write nickname"
+          id="nick-new"
+        />
+      </div>
       <div class="mb-3 text-center">
         <p>Email</p>
         <input
@@ -71,14 +81,24 @@
       const db = firebase.firestore();
       const storage = firebase.storage();
       function clickSignUp() {
+        let nick = document.getElementById("nick-new").value;
         let email = document.getElementById("email-new").value;
         let password = document.getElementById("pw-new").value;
         firebase
           .auth()
           .createUserWithEmailAndPassword(email, password)
           .then((result) => {
-            alert("가입되었습니다. 로그인 후 이용해주세요.");
-            window.location.href = "./index.html";
+            db.collection("Users")
+              .doc(`${email}`)
+              .set({
+                nickname: `${nick}`,
+                photoURL: null,
+                role: "user",
+              })
+              .then(function () {
+                alert("가입되었습니다. 글을 작성해보세요!");
+                window.location.href = "./index.html";
+              });
           })
           .catch((error) => {
             alert(error.message + "오류 발생");
