--- a/public/upload.html
+++ b/public/upload.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="md:container md:mx-auto text-center mt-10 shadow-lg">
+      <h2 class="font-extrabold text-xl text-center mb-3">글 작성하기</h2>
       <input
         type="text"
         class="form-control border-solid border-2 border-indigo-600 w-6/12 rounded-md shadow-md"
