--- a/public/profile.html
+++ b/public/profile.html
@@ -96,6 +96,14 @@
           >
             수정하기
           </button>
+          <button
+            type="submit"
+            class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
+            onclick="deleteUser(this.id)"
+            id="delete-btn"
+          >
+            탈퇴하기
+          </button>
         </div>
       </div>
     </div>
@@ -134,6 +142,7 @@
             .get()
             .then((info) => {
               document.getElementById("fix-btn").id = `${user.email}`;
+              document.getElementById("delete-btn").id = `${user.email}`;
               document.getElementById("profile-role").innerText =
                 info.data().role;
               document.getElementById("profile-nick").innerText =
@@ -273,6 +282,47 @@
             );
           }
         }
+      }
+      // 탈퇴 기능
+      function deleteUser(a) {
+        db.collection("Users")
+          .doc(`${a}`)
+          .get()
+          .then((info) => {
+            if (info.data().photoURL == null) {
+              db.collection("Users").doc(`${a}`).delete();
+              firebase
+                .auth()
+                .currentUser.delete()
+                .then(() => {
+                  alert("탈퇴되었습니다.");
+                  window.location.href = "./index.html";
+                });
+            } else {
+              let httpsReference = storage.refFromURL(
+                `${info.data().photoURL}`
+              );
+              let desertRef = storage
+                .ref()
+                .child(`${httpsReference._delegate._location.path_}`);
+              desertRef
+                .delete()
+                .then(() => {
+                  alert("프로필 사진이 삭제되었습니다.");
+                })
+                .catch((error) => {
+                  alert("이미지 삭제하다 오류!");
+                });
+              db.collection("Users").doc(`${a}`).delete();
+              firebase
+                .auth()
+                .currentUser.delete()
+                .then(() => {
+                  alert("탈퇴되었습니다.");
+                  window.location.href = "./index.html";
+                });
+            }
+          });
       }
     </script>
   </body>
