--- a/public/index.html
+++ b/public/index.html
@@ -144,85 +144,39 @@
           >
             <a
               href="#"
-              class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50"
+              class="inline-flex items-center py-2 px-4 mr-3 text-sm font-medium text-gray-500 bg-white rounded-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
             >
-              <span class="sr-only">Previous</span>
-              <!-- Heroicon name: solid/chevron-left -->
               <svg
-                class="h-5 w-5"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20"
+                class="mr-2 w-5 h-5"
                 fill="currentColor"
-                aria-hidden="true"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
               >
                 <path
                   fill-rule="evenodd"
-                  d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
+                  d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
                   clip-rule="evenodd"
-                />
+                ></path>
               </svg>
-            </a>
-            <!-- Current: "z-10 bg-indigo-50 border-indigo-500 text-indigo-600", Default: "bg-white border-gray-300 text-gray-500 hover:bg-gray-50" -->
-            <a
-              href="#"
-              aria-current="page"
-              class="z-10 bg-indigo-50 border-indigo-500 text-indigo-600 relative inline-flex items-center px-4 py-2 border text-sm font-medium"
-            >
-              1
+              Previous
             </a>
             <a
               href="#"
-              class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex items-center px-4 py-2 border text-sm font-medium"
+              id="next"
+              class="inline-flex items-center py-2 px-4 text-sm font-medium text-gray-500 bg-white rounded-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
             >
-              2
-            </a>
-            <a
-              href="#"
-              class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 hidden md:inline-flex relative items-center px-4 py-2 border text-sm font-medium"
-            >
-              3
-            </a>
-            <span
-              class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700"
-            >
-              ...
-            </span>
-            <a
-              href="#"
-              class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 hidden md:inline-flex relative items-center px-4 py-2 border text-sm font-medium"
-            >
-              8
-            </a>
-            <a
-              href="#"
-              class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex items-center px-4 py-2 border text-sm font-medium"
-            >
-              9
-            </a>
-            <a
-              href="#"
-              class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex items-center px-4 py-2 border text-sm font-medium"
-            >
-              10
-            </a>
-            <a
-              href="#"
-              class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50"
-            >
-              <span class="sr-only">Next</span>
-              <!-- Heroicon name: solid/chevron-right -->
+              Next
               <svg
-                class="h-5 w-5"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20"
+                class="ml-2 w-5 h-5"
                 fill="currentColor"
-                aria-hidden="true"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
               >
                 <path
                   fill-rule="evenodd"
-                  d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+                  d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
                   clip-rule="evenodd"
-                />
+                ></path>
               </svg>
             </a>
           </nav>
@@ -409,14 +363,15 @@
     </script>
     <script>
       const db = firebase.firestore();
-      db.collection("Board")
-        .get()
-        .then((items) => {
-          items.forEach((doc) => {
-            let rows = document.getElementById("rows");
-            let template = document.createElement("tr");
-            if (doc.data().img == null) {
-              template.innerHTML = `<tr>
+      let first = db.collection("Board").orderBy("date", "desc").limit(10);
+      const nextBtn = document.getElementById("next");
+
+      first.get().then((items) => {
+        items.forEach((doc) => {
+          let rows = document.getElementById("rows");
+          let template = document.createElement("tr");
+          if (doc.data().img == null) {
+            template.innerHTML = `<tr>
                 <td class="px-6 py-4 whitespace-nowrap">
                   <div class="flex items-center">
                     <div class="flex-shrink-0 h-10 w-10">
@@ -448,14 +403,14 @@
                      .getFullYear()
                      .toString()
                      .slice(-2)}/${
-                doc.data().date.toDate().getMonth() + 1
-              }/${doc.data().date.toDate().getDate()} ${doc
-                .data()
-                .date.toDate()
-                .getHours()}:${doc.data().date.toDate().getMinutes()}:${doc
-                .data()
-                .date.toDate()
-                .getSeconds()}
+              doc.data().date.toDate().getMonth() + 1
+            }/${doc.data().date.toDate().getDate()} ${doc
+              .data()
+              .date.toDate()
+              .getHours()}:${doc.data().date.toDate().getMinutes()}:${doc
+              .data()
+              .date.toDate()
+              .getSeconds()}
                 </span>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
@@ -469,9 +424,9 @@
                   </a>
                 </td>
               </tr>`;
-              rows.append(template);
-            } else {
-              template.innerHTML = `<tr>
+            rows.append(template);
+          } else {
+            template.innerHTML = `<tr>
                 <td class="px-6 py-4 whitespace-nowrap">
                   <div class="flex items-center">
                     <div class="flex-shrink-0 h-10 w-10">
@@ -503,14 +458,14 @@
                      .getFullYear()
                      .toString()
                      .slice(-2)}/${
-                doc.data().date.toDate().getMonth() + 1
-              }/${doc.data().date.toDate().getDate()} ${doc
-                .data()
-                .date.toDate()
-                .getHours()}:${doc.data().date.toDate().getMinutes()}:${doc
-                .data()
-                .date.toDate()
-                .getSeconds()}
+              doc.data().date.toDate().getMonth() + 1
+            }/${doc.data().date.toDate().getDate()} ${doc
+              .data()
+              .date.toDate()
+              .getHours()}:${doc.data().date.toDate().getMinutes()}:${doc
+              .data()
+              .date.toDate()
+              .getSeconds()}
                 </span>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
@@ -524,10 +479,30 @@
                   </a>
                 </td>
               </tr>`;
-              rows.append(template);
-            }
-          });
+            rows.append(template);
+          }
         });
+        // Get the last visible document
+        let lastVisible = items.docs[items.docs.length - 1];
+        // Construct a new query starting at this document,
+        // get the next 25 cities.
+        let next = db
+          .collection("Board")
+          .orderBy("date", "desc")
+          .startAfter(lastVisible)
+          .limit(10);
+
+        nextBtn.addEventListener("click", nextClick);
+
+        function nextClick() {
+          rows.innerHTML = "";
+          next.get().then((nextItems) => {
+            nextItems.forEach((nextDoc) => {
+              console.log("확인");
+            });
+          });
+        }
+      });
     </script>
     <script>
       const editModal = document.getElementById("edit-modal");
